<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="#FFFFFF">

    <!-- Header Section -->
    <ImageView
        android:id="@+id/imageViewHeader"
        android:layout_width="49dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/contentLogos"
        android:src="@drawable/knowmangrove_logos" />

    <!-- Image Preview Section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="5dp"
        android:layout_weight="1">

        <!-- ImageView yang berbentuk persegi -->
        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/mantap"
            android:contentDescription="@string/imagesPrev"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- TextView di bawah ImageView -->
        <TextView
            android:id="@+id/textViewBelowImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Ayo scan gambar daun mu!!"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- Mangrove Name and Score -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultName"
        android:fontFamily="@font/adlam_display"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/tvScoreRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreRate"
        android:textSize="12sp"
        android:textStyle="italic"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp" />

    <!-- Camera and File Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@android:color/transparent">

        <LinearLayout
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="Camera icon"
                android:src="@drawable/photo_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/adlam_display"
                android:text="Camera"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="File icon"
                android:src="@drawable/image_gallery" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/adlam_display"
                android:text="Pilih File"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <!-- View Result Button -->
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resButton"
        android:backgroundTint="#6699FF"
        android:textColor="@android:color/white"
        android:fontFamily="@font/adlam_display"
        android:background="@drawable/corner_radius_res"
        android:padding="16dp"
        android:textSize="18sp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="24dp"/>

    <!-- Exit Application Button -->
    <Button
        android:id="@+id/btnExitApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/outApp"
        android:backgroundTint="#FF3333"
        android:fontFamily="@font/adlam_display"
        android:padding="10dp"
        android:textSize="16sp"
        android:background="@drawable/corner_rad_exit"
        android:textColor="@android:color/white"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="50dp"/>
</LinearLayout>
